--- a/index.html
+++ b/index.html
@@ -13,12 +13,23 @@
     </head>
 
     <body>
-<nav class="navbar navbar-dark bg-dark">
-  <p>Hello World!</p>
-</nav>
+
+   <!-- Nav -->
+      <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+        <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
+        <ul class="navbar-nav px-3">
+          <li class="nav-item text-nowrap">
+            <a class="nav-link" id="sign-out-btn">Sign Out</a>
+          </li>
+          <li class="nav-item text-nowrap">
+            <a class="nav-link" id="change-pw-btn">Change Password</a>
+          </li>
+        </ul>
+      </nav>
+
       <!-- Sign Up -->
 
-                <div id="home-screen" class="modal-dialog modal-content modal-body">
+                <div class="modal-dialog modal-dialog-center modal-content modal-body home-screen">
 
                   <div class="modal-header user-sign-up">
                     <h5 class="modal-title">Sign Up:</h5>
@@ -68,34 +79,107 @@
             </div>
               </div>
 
-          <!-- Sign In Modal -->
-                  <!-- <div class="modal-dialog modal-content modal-body">
-                    <div class="modal-header">
-                      <h5 class="modal-title">Log In:</h5>
+     <!-- Dashboard -->
+
+              <div class="container-fluid">
+                <div class="row">
+                  <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                    <div class="sidebar-sticky">
+                      <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="#">
+                            <span data-feather="home"></span>
+                            Dashboard <span class="sr-only">(current)</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="file"></span>
+                            Orders
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="shopping-cart"></span>
+                            Products
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="users"></span>
+                            Customers
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="bar-chart-2"></span>
+                            Reports
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="layers"></span>
+                            Integrations
+                          </a>
+                        </li>
+                      </ul>
+
+                      <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                        <span>Saved reports</span>
+                        <a class="d-flex align-items-center text-muted" href="#">
+                          <span data-feather="plus-circle"></span>
+                        </a>
+                      </h6>
+                      <ul class="nav flex-column mb-2">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Current month
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Last quarter
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Social engagement
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Year-end sale
+                          </a>
+                        </li>
+                      </ul>
                     </div>
-                    <form id="user-sign-in">
-                <div class="form-group">
-                  <label>Email address</label>
-                  <input type="email" name="credentials[email]" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                  <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
+                  </nav>
 
-                <div class="form-group">
-                  <label>Password</label>
-                  <input type="password" name="credentials[password]" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-
-                <button type="submit" class="btn btn-primary">Sign In!</button>
-              </form>
-
-                  </div>
-                  <!- Toggle SignUp and SignIn -->
-                  <!-- <div class="modal-footer">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                      <button type="button" id="signUpModalBtn" class="btn btn-secondary">Sign Up</button>
-                      <button type="button" id="logInModalBtn" class="btn btn-secondary">Log In</button>
+                  <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                      <h1 class="h2">Dashboard</h1>
+                      <div class="btn-toolbar mb-2 mb-md-0">
+                        <div class="btn-group mr-2">
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
+                          <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
+                        </div>
+                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
+                          <span data-feather="calendar"></span>
+                          This week
+                        </button>
+                      </div>
                     </div>
-                  </div> --> -->
+
+                    <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+
+
+                    </div>
+                  </main>
+                </div>
 
     </body>
 </html>
