--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <!-- Sign Up -->
 
-                <div class="modal-dialog modal-dialog-center modal-content modal-body home-screen">
+                <div class="modal-dialog modal-content modal-body home-screen">
 
                   <div class="modal-header user-sign-up">
                     <h5 class="modal-title">Sign Up:</h5>
@@ -162,25 +162,12 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" id="get-groups">
-                            See all Public Groups
+                            Public Groups
                           </a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
-                            See One Group
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span>
-                            Update a Group
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">
-                            <span data-feather="layers"></span>
-                            Delete A Group
+                          <a class="nav-link" id="user-groups">
+                            Your Groups
                           </a>
                         </li>
                       </ul>
