--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
               </div>
               <button type="submit" class="btn btn-primary">Sign Up</button>
             </form>
+
         <!-- User-Sign-In Form -->
         <div class="modal-header user-sign-in">
           <h5 class="modal-title">Log In:</h5>
@@ -130,7 +131,7 @@
                                         <div class="modal-dialog" role="document">
                                           <div class="modal-content">
                                             <div class="modal-header">
-                                              <h5 class="modal-title">Create A Group:</h5>
+                                              <h5 class="modal-title">Create A Public Group:</h5>
                                               <button type="button" class="close" data-dismiss="modal">
                                                 <span aria-hidden="true">&times;</span>
                                               </button>
